--- a/JenkinsFile
+++ b/JenkinsFile
@@ -9,7 +9,7 @@ pipeline {
                 git branch: 'master', url: 'https://github.com/kelwinsj/gallery-two.git'
             }
         }
-        stage('Build') { 
+        stage('Dependencies Download') { 
             steps {
                 sh 'npm install'
             }
@@ -19,11 +19,16 @@ pipeline {
                 sh 'npm test'
             }
         }
+        stage('Deploy') { 
+            steps {
+                sh 'node server'
+            }
+        }
     }
     post {
         success {
            slackSend channel: 'devops5', message: "${env.JOB_NAME} Build successful: ID:${env.BUILD_ID}";
-           mail bcc: '', body: "<b>Email notification</b><br>Project: ${env.JOB_NAME} <br>Build Number: ${env.BUILD_NUMBER} <br> URL de build: ${env.BUILD_URL}", cc: '', charset: 'UTF-8', from: 'hello@bydewfall.com', mimeType: 'text/html', replyTo: '', subject: "Successful Test CI: Project name -> ${env.JOB_NAME}", to: "stephen.nganga1@student.moringaschool.com";
+           mail bcc: '', body: "<b>Email notification</b><br>Project: ${env.JOB_NAME} <br>Build Number: ${env.BUILD_NUMBER} <br> URL de build: ${env.BUILD_URL}<br>Check live site:  https://gallery-two.onrender.com/", cc: '', charset: 'UTF-8', from: 'hello@bydewfall.com', mimeType: 'text/html', replyTo: '', subject: "Successful Test CI: Project name -> ${env.JOB_NAME}", to: "stephen.nganga1@student.moringaschool.com";
         }
         failure {
             slackSend channel: 'devops5', message: "${env.JOB_NAME} Build failed: ID:${env.BUILD_ID}";
